--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ mkdocs-material = "^9.0.3"
 poethepoet = "*"
 mkdocs-glightbox = "^0.3.1"
 mdformat_admon = "^0.0.1"
+mdformat_tables = "^0.4.1"
 
 
 [tool.poe.tasks]
