--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,4 +52,4 @@ nav:
   - Introduction: index.md
   - Getting Started: getting-started.md
   - Setup Guides:
-    - LNBits: lnbits.md
+    - LNbits: lnbits.md
