--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ markdown_extensions:
 
 nav:
   - Introduction: index.md
+  - Compatibility: compatibility.md
   - Getting Started: getting-started.md
   - Setup Guides:
     - LNbits: lnbits.md
