--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ markdown_extensions:
 
 nav:
   - Introduction: index.md
+  - Merchant Compatibility: merchant-compatibility.md
   - Getting Started: getting-started.md
   - Setup Guides:
     - LNbits: lnbits.md
