Add link to BoltRing Shop

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,3 +64,4 @@ nav:
     - Video Tutorials: video-tutorials.md
     - LNbits Setup: lnbits.md
     - BoltRing Reset: boltring-reset.md
+  - BoltRing Shop: https://bitcoin-ring.com
